syntax = "proto3";

option csharp_namespace = "LimeKuma";

package kumabot;

import "google/protobuf/wrappers.proto";

service BestsApi {
  rpc GetFromLxns (LxnsBestsRequest) returns (stream ImageResponse);
  rpc GetAnimeFromLxns (LxnsBestsRequest) returns (stream ImageResponse);
  rpc GetFromLxnsWithLevelSeg (LxnsBestsRequest) returns (stream ImageResponse);
  rpc GetFromDivingFish (DivingFishBestsRequest) returns (stream ImageResponse);
  rpc GetAnimeFromDivingFish (DivingFishBestsRequest) returns (stream ImageResponse);
  rpc GetFromDivingFishWithLevelSeg (DivingFishBestsRequest) returns (stream ImageResponse);
}

service ListApi {
  rpc GetFromLxns (LxnsListRequest) returns (stream ImageResponse);
  rpc GetFromDivingFish (DivingFishListRequest) returns (stream ImageResponse);
}

message LxnsBestsRequest {
  string devToken = 1;
  google.protobuf.UInt32Value qq = 2;
  google.protobuf.StringValue personalToken = 3;
}

message DivingFishBestsRequest {
  uint32 qq = 1;
  sint32 frame = 2;
  sint32 plate = 3;
  sint32 icon = 4;
}

message LxnsListRequest {
  string personalToken = 1;
  string level = 2;
  sint32 page = 3;
}

message DivingFishListRequest {
  string token = 1;
  uint32 qq = 2;
  string level = 3;
  sint32 page = 4;
  sint32 plate = 5;
  sint32 icon = 6;
}

message ImageResponse {
  bytes data = 1;
}
